--- a/client/src/components/dashboard/dashboard.scss
+++ b/client/src/components/dashboard/dashboard.scss
@@ -17,7 +17,6 @@
 }
 
 .dashboard-inner {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -25,7 +24,7 @@
   border-radius: 15px;
   box-shadow: inset 0px 0px 5px 0px #000000;
   background-color: #505050;
-  padding: 15px 0px;
+  padding: 15px;
 }
 
 .dashboard-heading {
