--- a/client/src/components/playlist/publicPLaylistCard.scss
+++ b/client/src/components/playlist/publicPLaylistCard.scss
@@ -7,7 +7,6 @@ h3.public-playlist-title {
 }
 
 .public-playlist-container {
-  display: flex;
   justify-content: center;
   margin: 10px 0px;
   
